<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Deals App</string>
    <string name="action_settings">Paramètres</string>
    <string name="toast_no_google_account_selected">No Google Account Selected</string>
    <string name="toast_exception_checking_authorization">Exception checking authorization</string>
    <string name="toast_no_google_accounts_registered">No Google Accounts Registered</string>
    <string name="toast_only_one_google_account_registered">Your only registered Google account was
    selected</string>
    <string name="title_activity_ajout_deal">Proposition Deal</string>
    <string name="title_activity_liste_deals">Liste Deals</string>
    <string name="typeDeal">Type Deal</string>

    <string-array name="typeDeals">
        <item>Restoration</item>
        <item>Culture</item>
        <item>High-Tech</item>
    </string-array>
    <string-array name="categorieDeal">
        <item>HIGH_TECH</item>
        <item>AUDIOVISUEL</item>
        <item>LOISIRS</item>
        <item>MODE</item>
        <item>MAISON</item>
        <item>SERVICES</item>
        <item>EPICERIE</item>
    </string-array>
    <string-array name="typeDeal">
        <item>BON_PLAN</item>
        <item>BONS_REDUCTION</item>
        <item>VENTE_FLASH</item>
        <item>OFFRE_GRATUITE</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="nomDeal">Nom Deal</string>
    <string name="emplacementDeal">Lieu Deal</string>
    <string name="titreDeal">Titre</string>
    <string name="titreDealHint">C\'est quoi le deal</string>
    <string name="lieuDeal">Lieu</string>
    <string name="lieuDealHint">Où se trouve le deal ?</string>
    <string name="marchandDeal">Nom du marchand</string>
    <string name="marchandDealHint">Chez qui se trouve le deal ?</string>
    <string name="enLigne">En ligne</string>
    <string name="enMagasin">En Magasin</string>
    <string name="prixDeal">Prix (€)</string>
    <string name="prixDealHint">Combien ça côute ?</string>
    <string name="categorieDeal">Catégorie</string>
    <string name="descriptionDeal">Description Deal</string>
    <string name="decrireLeDeal">Decrire le deal en quelques mots</string>
    <string name="photoDeal">photo deal</string>
    <string name="ajouterDeal">Ajouter Deal</string>
    <string name="focusDeal">Details Deal</string>
    <string name="listeDeal">Afficher liste deals</string>
    <string name="Interfacetest">Interface de test</string>

    <!-- Configurer profil Strings  / -->
    <string name="configurerProfil">Configurer Profil</string>
    <string name="userAvatar">User Avatar</string>
    <string name="configurerProfilMenu">Configurer Profil</string>

    <!-- Parametrer application Strings -->
    <string name="tailleListe">Taille Liste Deals</string>
    <string name="frequenceUpdate">Fréquence Update Deals</string>
    <string name="title_activity_parametrer_application">Paramètres</string>
    <string name="updateDealsMenu">Mis à jour liste Deals</string>
    <string name="title_activity_liste_commentaires">Commentaires</string>


    <!-- Valeurs pour la fréquence d'update du service -->

    <string name="resumeFrequeceUpdate">Quelle doit etre la fréquence possible d\'update ?</string>
    <string name="titreFrequenceUpdate">Fréquence d\'update</string>

    <string name="msgNotificationTitle">New Deals Updates</string>
    <string name="msgNotificationMessage">Vous avez %d deals en plus</string>


    <string-array name="interval">
        <item>JAMAIS</item>
        <item>15 minutes</item>
        <item>Demi heure</item>
        <item>Une heure</item>
        <item>Demi journée</item>
        <item>Une journée</item>
    </string-array>

    <string-array name="intervalValues">
        <item>0</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>


  <string name="send_deals_notifications_permission_label">Sends Deals Notifications</string>
  <string name="send_deals_notifications_permission_description">Allow this application to send deals
    notifications to other applications</string>
  <string name="receive_deals_notifications_permission_label">Receive Deals Notifications</string>
  <string name="receive_deals_notifications_permission_description">Allow this application to receive deals
    notifications from other applications</string>

</resources>
