<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.taucarre.smartdeals.smartdealsapp.AjoutDealActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/titreDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/titreDealHint"/>


    <TextView
        android:text="@string/lieuDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/lieuDealHint"/>


    <TextView
        android:text="@string/marchandDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/marchandDealHint"/>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enLigne"
            android:id="@+id/enLigneRadioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enMagasin"
            android:id="@+id/EnMagasinRadioButton"
            android:layout_gravity="right" />

    </TableRow>

    <TextView
        android:text="@string/prixDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/prixDealHint"/>


    <TextView
        android:text="@string/categorieDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/categorieDealListe"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">
    </Spinner>

    <TextView
        android:text="@string/descriptionDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descritionDealText"
        android:hint="@string/decrireLeDeal"
        android:scrollbars="vertical"/>


</LinearLayout>
