<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.taucarre.smartdeals.smartdealsapp.MainActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/listeDeal"
        android:title="@string/listeDeal"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_add"/>

    <item android:id="@+id/ajouterDeal"
        android:title="@string/ajouterDeal"
        android:orderInCategory="201"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_add"/>

    <item android:id="@+id/focusDeal"
        android:title="@string/focusDeal"
        android:orderInCategory="201"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_add"/>

</menu>
