<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.taucarre.smartdeals.smartdealsapp.activities.ListeDealsActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/login"
        android:title="S'authentifier"
        android:orderInCategory="101"
        app:showAsAction = "never"
        android:icon="@drawable/login"/>
    <item android:id="@+id/deconnecter"
        android:title="Se deconnecter"
        android:orderInCategory="102"
        app:showAsAction = "never"
        android:icon="@drawable/login"/>
    <item android:id="@+id/ajouterDeal"
        android:title="@string/ajouterDeal"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_add"/>
    <item android:id="@+id/configurerProfilMenu"
        android:title="@string/configurerProfilMenu"
        android:orderInCategory="201"
        app:showAsAction="never"
        android:icon="@drawable/user_id"/>
    <item
        android:id="@+id/updateMenu"
        android:orderInCategory="202"
        android:title="update"
        app:showAsAction ="never"
        android:icon="@android:drawable/ic_media_play"/>
    <item
        android:id="@+id/showFavoris"
        android:orderInCategory="203"
        android:title="favoris"
        app:showAsAction ="never"
       />
</menu>
