<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >


     <ImageView
            android:id="@+id/imageDeal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:contentDescription="@string/photoDeal"
            android:src="@drawable/transaction64"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            />

      <TextView
           android:id="@+id/nomDeal"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           android:text="@string/nomDeal"
          android:layout_alignTop="@+id/imageDeal"
          android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/emplacementDeal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/emplacementDeal"
            android:layout_alignBottom="@+id/imageDeal"
            android:layout_alignLeft="@id/nomDeal"/>


        <TextView
            android:id="@+id/textDescDeal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/descriptionDeal"
            android:layout_below="@id/imageDeal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <ImageButton
            android:id="@+id/imageMoins"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/minus24"
            android:adjustViewBounds="true"
            android:maxWidth="37dp"
            android:maxHeight="37dp"
            android:scaleType="fitCenter"
            android:focusable="false"
            android:layout_below="@+id/textDescDeal"
            android:layout_toRightOf="@+id/counter"
         />

        <TextView
            android:id="@+id/counter"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="1"
            android:layout_toRightOf="@+id/imagePlus"
            android:layout_below="@+id/textDescDeal"
            android:paddingRight="10dp"
            android:paddingTop="5dp"/>
        <ImageButton
            android:id="@+id/imagePlus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/plus24"
            android:adjustViewBounds="true"
            android:maxWidth="37dp"
            android:maxHeight="37dp"
            android:scaleType="fitCenter"
            android:focusable="false"
            android:layout_below="@+id/textDescDeal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



</RelativeLayout>